@@ -10,3 +10,4 @@
 #undef HAVE_WORDEXP
 #undef HAVE_MPFR
 #undef GETTEXT_PACKAGE
+#undef HAVE_GTKSOURCEVIEW
