@@ -1,3 +1,10 @@
+Thu Jun 12 14:09:34 2003  George Lebl <jirka@5z.com>
+
+	* configure.in, src/Makefile.am, genius.lang, src/gnome-genius.c: add
+	  optional GtkSourceView support and add highlighting with that.
+	  I should figure out the mime type mess and install all this stuff
+	  so that even gedit can get highlighting for gel files.
+
 Wed Jun 11 11:27:18 2003  George Lebl <jirka@5z.com>
 
 	* src/genius-readline-helper.c, src/inter.c: change directory in the
